--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-markup-hw-01</title>
+    <title>WebStudio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -61,12 +61,108 @@
       <section class="main">
         <div class="container">
           <h1 class="main-header">Effective Solutions for Your Business</h1>
-          <button class="main-btn" type="button" data-modal-open>Order Service</button>
+          <button class="main-btn" type="button" data-modal-open>
+            Order Service
+          </button>
           <div class="backdrop is-hidden" data-modal>
             <div class="modal">
+              <form class="modal-form">
+                <p class="modal-form-title">
+                  Leave your contacts and we will call you back
+                </p>
+
+                <ul class="modal-form-list list">
+                  <li class="modal-form-item">
+                    <label class="modal-form-label" for="name"
+                      >Name
+                      <div class="modal-form-icon-caption">
+                        <svg class="modal-form-icon" width="18" height="18">
+                          <use
+                            href="./images/modal-form-icons.svg#icon-person"
+                          ></use>
+                        </svg>
+                        <input
+                          class="modal-form-input"
+                          type="name"
+                          name="name"
+                        />
+                      </div>
+                    </label>
+                  </li>
+
+                  <li class="modal-form-item">
+                    <label class="modal-form-label" for="name"
+                      >Phone
+                      <div class="modal-form-icon-caption">
+                        <svg class="modal-form-icon" width="18" height="18">
+                          <use
+                            href="./images/modal-form-icons.svg#icon-phone"
+                          ></use>
+                        </svg>
+                      <input
+                        class="modal-form-input"
+                        type="phone"
+                        name="phone"
+                      />
+                    </label>
+                  </li>
+                  <li class="modal-form-item">
+                    <label class="modal-form-label" for="name"
+                      >Email
+                      <div class="modal-form-icon-caption">
+                        <svg class="modal-form-icon" width="18" height="18">
+                          <use
+                            href="./images/modal-form-icons.svg#icon-email"
+                          ></use>
+                        </svg>
+                      <input
+                        class="modal-form-input"
+                        type="email"
+                        name="email"
+                      />
+                    </label>
+                  </li>
+                </ul>
+                <label class="modal-form-comment-label" for="name"
+                  >Comment
+                  <textarea
+                    class="modal-form-comment-input"
+                    name="comment"
+                    
+                    placeholder="Text input"
+                  ></textarea>
+                </label>
+                <!-- <div class="modal-form--terms-caption"> -->
+               <div class="modal-form--terms-caption">
+                  <label class="modal-form-terms">
+                    <input
+                      class="modal-form-checkbox"
+                      type="checkbox"
+                      name="checkbox"
+                      value="checkbox"
+                    />
+                    I accept the terms and conditions of the
+                    <a class="modal-form-privacy-policy" href="">Privacy Policy</a>
+                  </label>
+               </div>
+                <!-- 
+                  <input
+                    class="modal-form-checkbox"
+                    type="checkbox"
+                    name="checkbox"
+                  />
+                  <p class="modal-form-terms">
+                    I accept the terms and conditions of the Privacy Policy
+                  </p>
+                </div> -->
+                <button class="modal-form-btn" type="button">Send</button>
+              </form>
+
               <button class="btn-modal-close" type="button" data-modal-close>
                 <svg class="modal-icon-close">
-                  <use href="./images/modal-closing-icon.svg#modal-icon-close"></use>
+                  <use
+                    href="./images/modal-closing-icon.svg#modal-icon-close"
+                  ></use>
                 </svg>
               </button>
             </div>
@@ -538,6 +634,24 @@
             </li>
           </ul>
         </div>
+        <form class="subscribe">
+          <p class="subscribe-title">Subscribe</p>
+          <div class="subscribe-form">
+            <input
+              class="subscribe-item"
+              type="email"
+              name="email"
+              placeholder="E-mail"
+              required
+            />
+            <button class="subscribe-btn" type="submit">
+              Subscribe
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/subscribe-icon.svg#subscribe-icon"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
     <script src="./js/modal.js"></script>
