--- a/index.html
+++ b/index.html
@@ -70,58 +70,78 @@
                 <p class="modal-form-title">
                   Leave your contacts and we will call you back
                 </p>
-                    <label class="modal-form-label" for="name"
-                      >Name
-                      <div class="modal-form-icon-caption">
-                        <svg class="modal-form-icon" width="18" height="18">
-                          <use
-                            href="./images/modal-form-icons.svg#icon-person"
-                          ></use>
-                        </svg>
-                        <input
-                          class="modal-form-input"
-                          type="name"
-                          name="name"
-                        />
-                      </div>
-                    </label>
-                    <label class="modal-form-label" for="name"
-                      >Phone
-                      <div class="modal-form-icon-caption">
-                        <svg class="modal-form-icon" width="18" height="24">
-                          <use
-                            href="./images/modal-form-icons.svg#icon-phone"
-                          ></use>
-                        </svg>
-                      <input
-                        class="modal-form-input"
-                        type="phone"
-                        name="phone"
-                      />
-                    </label>
-                    <label class="modal-form-label" for="name"
-                      >Email
-                      <div class="modal-form-icon-caption">
-                        <svg class="modal-form-icon" width="18" height="24">
-                          <use
-                            href="./images/modal-form-icons.svg#icon-email"
-                          ></use>
-                        </svg>
-                      <input
-                        class="modal-form-input"
-                        type="email"
-                        name="email"
-                      />
-                    </label>
-                <label class="modal-form-comment-label" for="name"
-                  >Comment
+                <label class="modal-form-label"
+                  ><span class="label-name">Name</span>
+                  <span class="modal-input-wrapper">
+                    <input
+                      class="modal-form-input"
+                      type="text"
+                      name="user_name"
+                      required
+                    />
+                    <svg class="modal-form-icon" width="18" height="18">
+                      <use
+                        href="./images/modal-form-icons.svg#icon-person"
+                      ></use>
+                    </svg>
+                  </span>
+                </label>
+                <label class="modal-form-label"
+                  ><span class="label-name">Phone</span>
+                  <span class="modal-input-wrapper">
+                    <input
+                      class="modal-form-input"
+                      type="tel"
+                      name="user_phone_number"
+                      required
+                    />
+                    <svg class="modal-form-icon" width="18" height="24">
+                      <use
+                        href="./images/modal-form-icons.svg#icon-phone"
+                      ></use>
+                    </svg>
+                  </span>
+                </label>
+                <label class="modal-form-label"
+                  ><span class="label-name">Email</span>
+                  <span class="modal-input-wrapper">
+                    <input
+                      class="modal-form-input"
+                      type="email"
+                      name="user_email"
+                      required
+                    />
+                    <svg class="modal-form-icon" width="18" height="24">
+                      <use
+                        href="./images/modal-form-icons.svg#icon-email"
+                      ></use>
+                    </svg>
+                  </span>
+                </label>
+                <label class="modal-form-comment-label"
+                  ><span class="comment-label">Comment</span>
                   <textarea
                     class="modal-form-comment-input"
-                    name="comment"
+                    name="user_comment"
                     placeholder="Text input"
                   ></textarea>
                 </label>
-               <div class="modal-form--terms-caption">
+
+                <!--  -->
+
+                <input
+                  id="modal-checkbox"
+                  class="modal-checkbox visually-hidden"
+                  type="checkbox"
+                />
+                <label for="modal-checkbox" class="label-checkbox">
+                  I accept the terms and conditions of the&nbsp
+                  <a href="#">Privacy Policy</a>
+                </label>
+
+                <button class="modal-submit-btn" type="submit">Send</button>
+
+                <!-- <div class="modal-form--terms-caption">
                   <label class="modal-form-terms">
                     <input
                       class="modal-form-checkbox"
@@ -130,10 +150,12 @@
                       value="checkbox"
                     />
                     I accept the terms and conditions of the
-                    <a class="modal-form-privacy-policy" href="">Privacy Policy</a>
+                    <a class="modal-form-privacy-policy" href=""
+                      >Privacy Policy</a
+                    >
                   </label>
-               </div>
-                <button class="modal-form-btn" type="button">Send</button>
+                </div>
+                <button class="modal-form-btn" type="button">Send</button> -->
               </form>
               <button class="btn-modal-close" type="button" data-modal-close>
                 <svg class="modal-icon-close">
