--- a/portfolio.html
+++ b/portfolio.html
@@ -364,6 +364,24 @@
             </li>
           </ul>
         </div>
+        <form class="subscribe">
+          <p class="subscribe-title">Subscribe</p>
+          <div class="subscribe-form">
+            <input
+              class="subscribe-item"
+              type="email"
+              name="email"
+              placeholder="E-mail"
+              required
+            />
+            <button class="subscribe-btn" type="submit">
+              Subscribe
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/subscribe-icon.svg#subscribe-icon"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
   </body>
