--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
                   id="modal-checkbox"
                   class="modal-checkbox visually-hidden"
                   type="checkbox"
+                  name="modal-form-checkbox"
                 />
                 <label for="modal-checkbox" class="label-checkbox">
                   I accept the terms and conditions of the&nbsp
@@ -619,7 +620,7 @@
             <input
               class="subscribe-item"
               type="email"
-              name="email"
+              name="subscribe-email"
               placeholder="E-mail"
               required
             />
