--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                   name="modal-form-checkbox"
                 />
                 <label for="modal-checkbox" class="label-checkbox">
-                  I accept the terms and conditions of the&nbsp
+                  I accept the terms and conditions of the&nbsp;
                   <a href="#">Privacy Policy</a>
                 </label>
                 <button class="modal-submit-btn" type="submit">Send</button>
